[package]
name = "sniper"
version = "0.1.0"
authors = ["GoogleSites <discodude1234@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.4", features = ["json", "blocking"] }
serde_json = "1.0.66"
regex = "1"
serde = { version = "1.0.127", features = ["derive"] }